--- a/2022/Dockerfile.fts-polybase
+++ b/2022/Dockerfile.fts-polybase
@@ -3,6 +3,7 @@ ARG UBUNTU_VERSION="22.04"
 
 FROM mcr.microsoft.com/mssql/server:2022-${IMAGE_VERSION}
 
+ARG UBUNTU_VERSION
 USER root
 
 ENV IMAGE_VERSION=${IMAGE_VERSION}
