--- a/2019/Dockerfile.fts-polybase
+++ b/2019/Dockerfile.fts-polybase
@@ -3,10 +3,8 @@ ARG UBUNTU_VERSION="20.04"
 
 FROM mcr.microsoft.com/mssql/server:2019-${IMAGE_VERSION}
 
+ARG UBUNTU_VERSION
 USER root
-
-ENV IMAGE_VERSION=${IMAGE_VERSION}
-ENV UBUNTU_VERSION=${UBUNTU_VERSION}
 
 RUN apt-get update && \
     apt-get install -y software-properties-common && \
